--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -32,7 +32,7 @@
     </div>
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-            <p id="jalpc_site_pv"><strong>&copy; {{ 'now' | date: "%Y" }} {{ site.title }}</strong></p>
+            <p id="jalpc_site_pv"><strong>&copy; {{ 'now' | date: "%Y" }} {{ site.title }}</strong><a href="http://beian.miit.gov.cn/">陇ICP备18001410号-1</a></p>
         </div>
     </div>
 </div>
